ast: Refactor AstDumper to more generic Visitor
This is part of a big effort in establishing a universal visitor that
traverses the AST.